add js and prefix css

--- a/index.html
+++ b/index.html
@@ -402,6 +402,10 @@
             </div>
         </footer>
     </body>
+    
+    <script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
 </html>
 
 
